*Empty MediaWiki Message*

--- a/Arwas_n_waṭṭan_n_Kuṛunavirus_2019-20.mw
+++ b/Arwas_n_waṭṭan_n_Kuṛunavirus_2019-20.mw
@@ -11,4 +11,66 @@ Aṭas n tmura deg [[Turuft|Uruppa]] d [[Tamrikt n Ugafa|Temrikt tagafant]] d [[
 |azmez n tuwwṭa = 31 yennayer 2020
 | akala u ufaylu = https://web.archive.org/web/20200131191845/https://www.cdc.gov/coronavirus/2019-ncov/locations-confirmed-cases.html | azmez n ufaylu = 31 yennayer 2020 }}</ref>. [[Tallit n tezdalt]] d tin yettaṭṭafen 5 n wussan neɣ ugar, akken illan inzan imenza d akken yezmer ad yili d [[aṭṭan amanṭaṭ|amanṭaṭ]] send ma ad binen iskanen, iskanen-a gan d [[tawla]], [[tusut]] d [[bungaf]] akken i yezmer ad yawi ar [[Timekkest|tmekkest]] (lmut) 
 
-Seg 31 yennayer 2020 yettusentem (yettuwekked) ɣef tilin n 75,775 n tmelliyin (liḥalat) gar-asent timelliyin yellan deg yakk igrzda n [[Ccinwa]]
+Seg 31 yennayer 2020 yettusentem (yettuwekked) ɣef tilin n 75,775 n tmelliyin (liḥalat) gar-asent timelliyin yellan deg yakk igrzda n [[Ccinwa]]<ref name="amessiru awurman175">{{amnir n web/fsus
+| akala = https://health.columbia.edu/news/health-advisory-regarding-2019-novel-coronavirus-2019-ncov
+| azwel = Health Advisory Regarding 2019 Novel Coronavirus (2019-nCoV) {{!}} Columbia Health
+| tansa = health.columbia.edu
+| akala n ufaylu = https://web.archive.org/web/20200126140657/https://health.columbia.edu/news/health-advisory-regarding-2019-novel-coronavirus-2019-ncov
+| azmez n ufaylu = 26 January 2020
+|azmez n tuwwṭa = 26 yennayer 2020
+}}</ref><ref name="Field22Jan20202">{{aseggayet s isali
+| akala = https://www.washingtonpost.com/world/asia_pacific/nine-dead-as-chinese-coronavirus-spreads-despite-efforts-to-contain-it/2020/01/22/1eaade72-3c6d-11ea-afe2-090eb37b60b1_story.html
+| azwel = Nine dead as Chinese coronavirus spreads, despite efforts to contain it
+| aneggar = Field
+| amezwar = Field
+| azmez = 22 January 2020
+| Anahil = [[Washington Post]]
+| azmez n tuwwṭa = 22 yennayrr 2020
+| akala n ufaylu = https://web.archive.org/web/20200131005902/https://www.washingtonpost.com/world/asia_pacific/nine-dead-as-chinese-coronavirus-spreads-despite-efforts-to-contain-it/2020/01/22/1eaade72-3c6d-11ea-afe2-090eb37b60b1_story.html
+| azmez n ufaylu = 31 January 2020
+}}</ref><ref name="Imai21Jan20202">{{amnir n web/fsus
+| akala = https://www.imperial.ac.uk/media/imperial-college/medicine/sph/ide/gida-fellowships/2019-nCoV-outbreak-report-22-01-2020.pdf
+| azwel = Estimating the potential total number of novel Coronavirus cases in Wuhan City, China (Report 2
+| azmez = 17 January 2020
+| tansa = Imperial College London
+| akala n ufaylu = https://web.archive.org/web/20200124060030/https://www.imperial.ac.uk/media/imperial-college/medicine/sph/ide/gida-fellowships/2019-nCoV-outbreak-report-22-01-2020.pdf
+| azmez n tuwwṭa = 24 January 2020
+|azmez n tuwwṭa = 18 yennayer 2020
+| aneggar = Imai
+| amezwar = Natsuko
+| aneggar2 = Dorigatti
+| amezwar2 = Ilaria
+| aneggar3 = Cori
+| amezwar3 = Anne
+| aneggar4 = Riley
+| amezwar4 = Steven
+| aneggar5 = Ferguson
+| amexwar5 = Neil M
+}}</ref><ref name="amessiru awurman3">{{amnir n web/fsus
+| akala = https://www.cnn.com/2020/01/28/asia/wuhan-coronavirus-update-jan-29-intl-hnk/index.html
+| azwel = Wuhan coronavirus cases inside China have already overtaken SARS
+| tansa = CNN
+|azmez n tuwwṭa = 29 yennayer 2020
+| aneggar = Griffiths
+| amexwar = James
+| akala n ufaylu = https://web.archive.org/web/20200130203151/https://www.cnn.com/2020/01/28/asia/wuhan-coronavirus-update-jan-29-intl-hnk/index.html | azmez n tuwwṭa = 30 yennayer 2020 }}</ref> gar n 41 n yimdanen id yuttusentem d akken ineṭṭ-iten waṭṭan,  yettwakkez-d d akken sin n ikṛaden (⅔) deg-sen lan (sɛan) assaɣ ɣer ulzuz n Wuhan i yimeččiyen iwlalen. <ref name="Huang24Jan2020">{{asgayet s uɣmis akadim|last=Huang|last8=Fan|issn=0140-6736|DOI=10.1016/S0140-6736(20)30183-5|pages=|volume=|journal=Lancet|title=Clinical features of patients infected with 2019 novel coronavirus in Wuhan, China|date=24 yennayer 2020|first9=Jiuyang|last9=Xu|first8=Guohui|first7=Li|first=Chaolin|last7=Zhang|first6=Yi|last6=Hu|first5=Jianping|last5=Zhao|first4=Lili|last4=Ren|first3=Xingwang|last3=Li|first2=Yeming|last2=Wang|PMID=31986264}}</ref><ref name="Joseph24Jan2020">{{asgayet s isali
+| akala = https://www.statnews.com/2020/01/24/coronavirus-infections-no-symptoms-lancet-studies/
+| azwel = New coronavirus can cause infections with no symptoms and sicken otherwise healthy people, studies show
+| aneggar = Joseph
+| amezwar = Andrew
+| azmez = 24 January 2020
+| amahil = STAT
+|azmez n tuwwṭa = 27 yennayer 2020
+| Akala n ufaylu = https://web.archive.org/web/20200124204338/https://www.statnews.com/2020/01/24/coronavirus-infections-no-symptoms-lancet-studies/
+| azmez n ufaylu = 24 January 2020
+}}</ref><ref name="han24Jan2020">{{asgayet s uɣmis akadim|last=Chan|last8=Liu|issn=0140-6736|DOI=10.1016/S0140-6736(20)30154-9|pages=|volume=0|journal=The Lancet|title=A familial cluster of pneumonia associated with the 2019 novel coronavirus indicating person-to-person transmission: a study of a family cluster|date=24 yennayer 2020|first9=Cyril Chik-Yan|last9=Yip|first8=Jieling|first7=Fanfan|first=Jasper Fuk-Woo|last7=Xing|first6=Jin|last6=Yang|first5=Hin|last5=Chu|first4=Kelvin Kai-Wang|last4=To|first3=Kin-Hang|last3=Kok|first2=Shuofeng|last2=Yuan|PMID=31986261}}</ref><ref name="Schnirring25Jan2020">{{amnir n web/fsus
+| akala = http://www.cidrap.umn.edu/news-perspective/2020/01/doubts-rise-about-chinas-ability-contain-new-coronavirus
+| azwel = Doubts rise about China's ability to contain new coronavirus
+| azmez = 25 January 2020
+| tansa = CIDRAP
+| akala n ufaylu = https://web.archive.org/web/20200126102242/http://www.cidrap.umn.edu/news-perspective/2020/01/doubts-rise-about-chinas-ability-contain-new-coronavirus
+| azmez n ufaylu = 26 January 2020
+|azmez n tuwwṭa = 26 yennayer 2020
+| aneggar = Schnirring
+| amexwar = Lisa
+}}</ref>
