*Empty MediaWiki Message*

--- a/Arwas_n_waṭṭan_n_Kuṛunavirus_2019-20.mw
+++ b/Arwas_n_waṭṭan_n_Kuṛunavirus_2019-20.mw
@@ -73,4 +73,35 @@ Seg 31 yennayer 2020 yettusentem (yettuwekked) ɣef tilin n 75,775 n tmelliyin (
 |azmez n tuwwṭa = 26 yennayer 2020
 | aneggar = Schnirring
 | amexwar = Lisa
-}}</ref>
+}}</ref>. [[Timekkest]] (lmut) tamezwarut s waṭṭan-a yella-d deg wass n 29 yennayer, dɣa seg wass-nni llant-d 9,377 n tmekkisin
+
+Anfufed amezwaru i waṭṭan-a deg uzɣar (beṛṛa) n [[Ccinwa]] yella-d g tmurt n [[Vietnam]] 
+
+== Iskanen d izmal ==
+Wid ig yuɣ waṭṭan-a yezmer Ur d-tbanayen ara fellasen yiskanen seg 7 ar 14 n wussan imezwura akken i zemren ad sneflin iskanen ilektuyen am [[tusut]], [[tawla]], [[bungaf]] yakk d [[atmelli|utmelli]] (ɛeyyu)
+
+Akken i yezmer usnefli n waṭṭan seld n imiren ad iglu s bungaf amekruz d [[anegges aserkan|unegges aserkan]] d [[timekkest|tmekkest]] 
+
+[[Tallit n tezdalt]] (tallit gar n wenṭaṭ d tuffɣa n iskanen) d tin yettaṭṭafen gar n yiwen n wassar 14 n wussan. Maca amur ameqran deg-sent d tid yeṭṭefen 5 n wussan
+
+== Isragen (ssebbat) ==
+
+== Tawessna ==
+
+== Anfufed ==
+
+== Inelfuyen imdafaren ==
+
+== Taggaẓt ==
+
+== Tiski n isgunfa ==
+
+== Ideggan yenṭarren ==
+
+== Tamhazt n tdefrin ==
+
+== Ẓeṛ daɣen ==
+
+== Imniren ==
+[[taggayt:Tisekrarin n tsut tis 21)]]
+[[Taggayt:Arwas n waṭṭan n Kuṛunavirus 2019-20]]
