*Empty MediaWiki Message*

--- a/Arwas_n_waṭṭan_n_Kuṛunavirus_2019-20.mw
+++ b/Arwas_n_waṭṭan_n_Kuṛunavirus_2019-20.mw
@@ -75,7 +75,9 @@ Seg 31 yennayer 2020 yettusentem (yettuwekked) ɣef tilin n 75,775 n tmelliyin (
 | amexwar = Lisa
 }}</ref>. [[Timekkest]] (lmut) tamezwarut s waṭṭan-a yella-d deg wass n 29 yennayer, dɣa seg wass-nni llant-d 9,377 n tmekkisin
 
-Anfufed amezwaru i waṭṭan-a deg uzɣar (beṛṛa) n [[Ccinwa]] yella-d g tmurt n [[Vietnam]] 
+Anfufed amezwaru i waṭṭan-a deg uzɣar (beṛṛa) n [[Ccinwa]] yella-d g tmurt n [[Vietnam]]. Iduba n waṭas n iwunak erran-d tamawt ɣef werzaf d yinig ɣer [[Wuhan]] d [[Hubei]] akken id ssutren ɣef iminigen id yuɣalen seg [[Ccinwa]] ad ssersen iman-nsen deg [[Asasnef|usasnef]] i wazal n 14 ar 20 n wussan w ad ssiwlen i wemsuji i wakken ad iẓer ma it-ddem avirus
+
+Imusnawen seg [[Ccinwa]] ssawṭen ad ssinfen (ad ɛezlen) w ad ukzen [[agzam n ADN]] n uvirus. Akken ifkan isalen-is i wid-ak nniden i wakken ad sniflen [[Tasedmirt tanmezrit n Polimiraz|Tasedmirt tanmezrit n Polimiraz PCR]] s talɣa tafulmant i wesnirem n waṭṭan
 
 == Iskanen d izmal ==
 Wid ig yuɣ waṭṭan-a yezmer Ur d-tbanayen ara fellasen yiskanen seg 7 ar 14 n wussan imezwura akken i zemren ad sneflin iskanen ilektuyen am [[tusut]], [[tawla]], [[bungaf]] yakk d [[atmelli|utmelli]] (ɛeyyu)
