*Empty MediaWiki Message*

--- a/Affal.mw
+++ b/Affal.mw
@@ -1,1 +1,7 @@
 '''Affal''' d addad amnekni i walley (ssɛaya) istanen isnudranen id ikeffun i wmsenɣi mgal n [[igim]] d [[aṭṭan|waṭṭanen]] neɣ yal acengu d ungir asnudran, yakk d walley (ssɛaya) n [[agellez anaffal|ugellez anaffal]] i wsunef n [[urnan]] d [[aṭṭan affalman|waṭṭanen iffalmanen]]
+
+[[Tasnaffalt]] d tin yennezgmen (yefkan azal) i tezrawt n tmikanizmin yakk i yettakken tizmert i [[tafekka|tfekka]] i wakken ad yarey (ad yeḥrez) tiɣellisin-is. S unamek ad yeǧǧ yakk ayen yellan d agla-s w ad yezreb ayen ur nelli d agla-s, amdya: <br/>
+Iferdisen ar-imanen: 
+* [[Amikṛub|Imikṛuben]], [[Avirus|Ivirusen]], [[Tabiktirt|Biktirya]], 
+
+* Igmanen d [[imezṭi asnudran|imezṭiyen isnudranen]] uffiɣen ɣef tfekka
