--- a/Aṭṭan_n_Coronavirus_2019.mw
+++ b/Aṭṭan_n_Coronavirus_2019.mw
@@ -3,6 +3,8 @@
 Alammi d fuṛaṛ 2020 ulac assuji neɣ [[tigezt]] mgal n waṭṭan-a ayen yellan deg ufus n imsujiyen d [[Asuji n yiskanen|asefses n yiskanen]] d tedhelt n twuriwin n [[tafekka|tfekka]] <ref>{{amnir n web|akala=https://www.who.int/publications-detail/clinical-management-of-severe-acute-respiratory-infection-when-novel-coronavirus-(ncov)-infection-is-suspected|azwel=Clinical management of severe acute respiratory infection when novel coronavirus (nCoV) infection is suspected|adeg=[[tuddsa tamadlant n tdawsa]] (WHO)|azmez n tuwwṭa=3 fuṛaṛ 2020|url-status=live|akala n ufaylu=https://web.archive.org/web/20200131032122/https://www.who.int/publications-detail/clinical-management-of-severe-acute-respiratory-infection-when-novel-coronavirus-(ncov)-infection-is-suspected|azmez n ufaylu=31 January 2020}}</ref>
 
 == Iskanen d izmal ==
+[[Tugna:Iskanen_n_Covid-19.png|thumb|270px|Iskanen n Covid-19 id yettbinen seld n yiwen ar 14 n wussan seg wenṭaṭ n [[Kuṛunavirus]]]]
+
 Aṭṭan-a yezmer ad yaɣ amdan war ma ad ilin [[askan (tasnujya)|iskanen]] d izmal maca deg waṭas n waddaden n iden ttilin-tt-d tiskanin ama d tid yefsusen neɣ d timakrazin (qessiḥ-it) gar-asen tawla, [[idis (aṭṭan)|idis]], tusut d [[tadist (aṭṭan)|tadist]] ma d tiskanin n usgunef am [[anezzu|unezzu]] d legrajem d tid ur nettili ara s tuget
 
 Addaden imekruzen (qessiḥen) n waṭṭan-a d wid izemren ad glun s [[Buturin|tingas]] d feccal n wul d tgeẓẓal sin akin ar [[timekkest|tmekkest]] (lmut) <ref name="Hui14Jan20202">{{Vcite journal|authors=Hui DS, I Azhar E, Madani TA, Ntoumi F, Kock R, Dar O, Ippolito G, Mchugh TD, Memish ZA, Drosten C, Zumla A, Petersen E|title=The continuing 2019-nCoV epidemic threat of novel coronaviruses to global health – The latest 2019 novel coronavirus outbreak in Wuhan, China|journal=Int J Infect Dis|year=2020 Jan 14|volume=91|pages=264–266|pmid=31953166|doi=10.1016/j.ijid.2020.01.009}}{{Open access}}</ref><ref name="WHOQ&A27Jan202">{{amnir n web|akala=https://www.who.int/news-room/q-a-detail/q-a-coronaviruses |azwel=Q&A on coronaviruses |adeg=who.int |url-status=live |akala n ufaylu=https://web.archive.org/web/20200120174649/https://www.who.int/news-room/q-a-detail/q-a-coronaviruses |azmez n ufaylu=20 January 2020 |azmez n tuwwta=27 yennayer 2020}}</ref>
