*Empty MediaWiki Message*

--- a/Aṭṭan_n_Coronavirus_2019.mw
+++ b/Aṭṭan_n_Coronavirus_2019.mw
@@ -37,3 +37,4 @@ S unect n [[tasensakrart|tsensakrart]], [[isig n tmekkisin]] d waddaden n unfufe
 [[Taggayt:Tisekrarin n tsut tis 21]]
 [[Taggayt:Tisekrarin tidawsanin n 2019]]
 [[Taggayt:Tisekrarin tidawsanin n 2020]]
+[[Taggayt:Aṭṭan imanṭaṭen]]
