--- a/Aṭṭan_n_Coronavirus_2019.mw
+++ b/Aṭṭan_n_Coronavirus_2019.mw
@@ -16,6 +16,9 @@ Asrag n waṭṭan-a iga d avirus n [[SARS-CoV-2]]. Anda isem-is amezwaru yella 
 
 Imusnawen tt-ɣilen d akken aṭṭan-a yettakk aẓaṛ i [[Aṭṭan aɣersaw|yiɣersiwen]]
 
+== Asuṭen ==
+[[Tuddsa tamadlant n tdawsa]] tdewwen d akken [[tallit n tezdalt|akud n tefsirt ar uvirus alamma banen-d iskanen]] d win yettilin gar n 2 ar 10 n wussan. ،<ref>{{amnir n web|akala=https://www.who.int/docs/default-source/coronaviruse/situation-reports/20200126-sitrep-6-2019--ncov.pdf|azwel=Novel Coronavirus (2019-nCoV) Situation Report – 6 26 January 2020|azmez n tuwwṭa=2 fuṛaṛ 2020| akala n ufaylu = https://web.archive.org/web/20200207204621/https://www.who.int/docs/default-source/coronaviruse/situation-reports/20200126-sitrep-6-2019--ncov.pdf | azmez n ufaylu = 7 fuṛaṛ 2020 }}</ref> neɣ seg sin n wussan ar 14 n wussan s unect n [[ammasen i wsenɣed d tesɣil ɣef  waṭṭanen]].<ref name="CDC symptoms">{{amnir n web|akala=https://www.cdc.gov/coronavirus/2019-ncov/about/symptoms.html|azwel=Symptoms of Novel Coronavirus (2019-nCoV) |azmez=31 yennayer 2020|adeg=[[ammasen i wsenɣed d tesɣil ɣef  waṭṭanen]] (CDC)|azmez n tuwwṭa=2 fuṛaṛ 2020| akala n ufaylu = https://web.archive.org/web/20200206103410/https://www.cdc.gov/coronavirus/2019-ncov/about/symptoms.html | azmez n ufaylu = 6 fuṛaṛ 2020 }}</ref>
+
 == Tawassna ==
 [[Tuddsa tamadlant n tdawsa]] tfesr-d aṭas n ipṛutukulen i wkayar n Coronavirus amsetrar <ref name="Schirring16Jan2020">{{amnir n web|akala=http://www.cidrap.umn.edu/news-perspective/2020/01/japan-has-1st-novel-coronavirus-case-china-reports-another-death |azwel=Japan has 1st novel coronavirus case; China reports another death |aneggar=Schirring |amezwar=Lisa |aneggar=2020 |azmez=16 January 2020 |n ufaylu=CIDRAP |url-status=live |akala afaylu=https://web.archive.org/web/20200120043657/http://www.cidrap.umn.edu/news-perspective/2020/01/japan-has-1st-novel-coronavirus-case-china-reports-another-death |azmez n ufaylu=20 January 2020 |azmez n tuwwṭa=16 yennayer 2020}}</ref><ref name="WHO_InterimGuidance">{{amnir n web|akala=https://www.who.int/health-topics/coronavirus/laboratory-diagnostics-for-novel-coronavirus |azwel=Laboratory testing for 2019 novel coronavirus (2019-nCoV) in suspected human cases: Interim guidance |adeg=[[tuddsa tamadlant n tdawsa]] |url-status=live |akala n ufaylu=https://web.archive.org/web/20200120175355/https://www.who.int/health-topics/coronavirus/laboratory-diagnostics-for-novel-coronavirus |azmez n ufaylu=20 January 2020 |azmez n tuwwṭa=28 yennayer 2020}}</ref>, Akayad n [[Tasedmirt tanmezrit n Polimiraz i wseskel amuli]] (rRT-PCR)
 
