--- a/Aṭṭan_n_Coronavirus_2019.mw
+++ b/Aṭṭan_n_Coronavirus_2019.mw
@@ -10,11 +10,15 @@ Aṭṭan-a yezmer ad yaɣ amdan war ma ad ilin [[askan (tasnujya)|iskanen]] d i
 Addaden imekruzen (qessiḥen) n waṭṭan-a d wid izemren ad glun s [[Buturin|tingas]] d feccal n wul d tgeẓẓal sin akin ar [[timekkest|tmekkest]] (lmut) <ref name="Hui14Jan20202">{{Vcite journal|authors=Hui DS, I Azhar E, Madani TA, Ntoumi F, Kock R, Dar O, Ippolito G, Mchugh TD, Memish ZA, Drosten C, Zumla A, Petersen E|title=The continuing 2019-nCoV epidemic threat of novel coronaviruses to global health – The latest 2019 novel coronavirus outbreak in Wuhan, China|journal=Int J Infect Dis|year=2020 Jan 14|volume=91|pages=264–266|pmid=31953166|doi=10.1016/j.ijid.2020.01.009}}{{Open access}}</ref><ref name="WHOQ&A27Jan202">{{amnir n web|akala=https://www.who.int/news-room/q-a-detail/q-a-coronaviruses |azwel=Q&A on coronaviruses |adeg=who.int |url-status=live |akala n ufaylu=https://web.archive.org/web/20200120174649/https://www.who.int/news-room/q-a-detail/q-a-coronaviruses |azmez n ufaylu=20 January 2020 |azmez n tuwwta=27 yennayer 2020}}</ref>
 
 == Isragen (ssebbat) ==
+
 [[File:SARS-CoV-2 49531042877.jpg|thumb|adumu s tisit tiliktṛunant i tugna n SARS-CoV-2 (talemmast, awraɣ)<ref name=niaidSARS-CoV-2>{{Cite web|url=https://www.niaid.nih.gov/news-events/novel-coronavirus-sarscov2-images|title=New Images of Novel Coronavirus SARS-CoV-2 Now Available {{!}} NIH: National Institute of Allergy and Infectious Diseases|website=www.niaid.nih.gov|access-date=1 March 2020}}</ref>]]
 
 Asrag n waṭṭan-a iga d avirus n [[SARS-CoV-2]]. Anda isem-is amezwaru yella d '''Coronavirus amaynu n 2019''' (2019-nCoV)
 
 Imusnawen tt-ɣilen d akken aṭṭan-a yettakk aẓaṛ i [[Aṭṭan aɣersaw|yiɣersiwen]]
+
+=== Anṭaṭ ===
+Tarrayt n wenṭaṭ tagejdant tettili-d seg wemdar ar wemdan n iden s tikciyin timesgunefin am [[anezzu|unezzu]] d [[tusut]]. Tuddsa tamadlant n tdawsa txeddem g uskazal i wakken ad tẓer ma yella wenṭaṭ araskan d wenṭaṭ s tawla kecmen deg iɣunab n wenṭaṭ igejdanen.<ref name=":32">{{amnir n web/fsus/afrensaw|langue=en|auteur1=Wu, F. et al.|titre=Wuhan seafood market pneumonia virus isolate Wuhan-Hu-1, complete genome|url= https://www.ncbi.nlm.nih.gov/nuccore/MN908947|site=GenBank|périodique=|date=2020-01-23|consulté le=2020-01-23|akala n ufaylu= https://web.archive.org/web/20200304185444/https://www.ncbi.nlm.nih.gov/nuccore/MN908947|azmez n ufaylu=2020-03-04}}.</ref>
 
 == Asuṭen ==
 [[Tuddsa tamadlant n tdawsa]] tdewwen d akken [[tallit n tezdalt|akud n tefsirt ar uvirus alamma banen-d iskanen]] d win yettilin gar n 2 ar 10 n wussan. ،<ref>{{amnir n web|akala=https://www.who.int/docs/default-source/coronaviruse/situation-reports/20200126-sitrep-6-2019--ncov.pdf|azwel=Novel Coronavirus (2019-nCoV) Situation Report – 6 26 January 2020|azmez n tuwwṭa=2 fuṛaṛ 2020| akala n ufaylu = https://web.archive.org/web/20200207204621/https://www.who.int/docs/default-source/coronaviruse/situation-reports/20200126-sitrep-6-2019--ncov.pdf | azmez n ufaylu = 7 fuṛaṛ 2020 }}</ref> neɣ seg sin n wussan ar 14 n wussan s unect n [[ammasen i wsenɣed d tesɣil ɣef  waṭṭanen]].<ref name="CDC symptoms">{{amnir n web|akala=https://www.cdc.gov/coronavirus/2019-ncov/about/symptoms.html|azwel=Symptoms of Novel Coronavirus (2019-nCoV) |azmez=31 yennayer 2020|adeg=[[ammasen i wsenɣed d tesɣil ɣef  waṭṭanen]] (CDC)|azmez n tuwwṭa=2 fuṛaṛ 2020| akala n ufaylu = https://web.archive.org/web/20200206103410/https://www.cdc.gov/coronavirus/2019-ncov/about/symptoms.html | azmez n ufaylu = 6 fuṛaṛ 2020 }}</ref>
