--- a/Aṭṭan_n_Coronavirus_2019.mw
+++ b/Aṭṭan_n_Coronavirus_2019.mw
@@ -18,7 +18,16 @@ Asrag n waṭṭan-a iga d avirus n [[SARS-CoV-2]]. Anda isem-is amezwaru yella 
 Imusnawen tt-ɣilen d akken aṭṭan-a yettakk aẓaṛ i [[Aṭṭan aɣersaw|yiɣersiwen]]
 
 === Anṭaṭ ===
-Tarrayt n wenṭaṭ tagejdant tettili-d seg wemdar ar wemdan n iden s tikciyin timesgunefin am [[anezzu|unezzu]] d [[tusut]]. Tuddsa tamadlant n tdawsa txeddem g uskazal i wakken ad tẓer ma yella wenṭaṭ araskan d wenṭaṭ s tawla kecmen deg iɣunab n wenṭaṭ igejdanen.<ref name=":32">{{amnir n web/fsus/afrensaw|langue=en|auteur1=Wu, F. et al.|titre=Wuhan seafood market pneumonia virus isolate Wuhan-Hu-1, complete genome|url= https://www.ncbi.nlm.nih.gov/nuccore/MN908947|site=GenBank|périodique=|date=2020-01-23|consulté le=2020-01-23|akala n ufaylu= https://web.archive.org/web/20200304185444/https://www.ncbi.nlm.nih.gov/nuccore/MN908947|azmez n ufaylu=2020-03-04}}.</ref>
+Tarrayt n wenṭaṭ tagejdant tettili-d seg wemdar ar wemdan n iden s tikciyin timesgunefin am [[anezzu|unezzu]] d [[tusut]]. Tuddsa tamadlant n tdawsa txeddem g uskazal i wakken ad tẓer ma yella wenṭaṭ araskan d wenṭaṭ s tawla kecmen deg iɣunab n wenṭaṭ igejdanen.<ref name=":32">{{amnir n web/fsus/afrensaw|langue=en|auteur1=Wu, F. et al.|titre=Wuhan seafood market pneumonia virus isolate Wuhan-Hu-1, complete genome|url= https://www.ncbi.nlm.nih.gov/nuccore/MN908947|site=GenBank|périodique=|date=2020-01-23|consulté le=2020-01-23|akala n ufaylu= https://web.archive.org/web/20200304185444/https://www.ncbi.nlm.nih.gov/nuccore/MN908947|azmez n ufaylu=2020-03-04}}.</ref>, ɣef wanect-a yessefk ad yili westum gar n yimdanen 1,5 ma drus i wakken ur yettenṭaṭ ara waṭṭan ma yenzi-d (iɛeṭs-d) kra n yiwen 
+
+Timiqwa yessawaṭen [[Kuṛunavirus]] tt-ɣamayen-t ugglent (ttwaɛelqen-t) deg [[azwu|uzwu]] i kra n wakud Kan sin akin ad ɣlint f kra am tgida (ṭṭabla) neɣ kra n tɣawsa ayen yettaǧǧan avirus-nni ad yenṭeṭ ma yeṭṭsa-t (imuss-it) kra n wemdan aladɣa ma yeṭṭsa imi-ynes neɣ allen-is neɣ inzaren-is send ma yessared ifassen-is s waman d [[aserrad|userrad]] 
+
+
+
+=== Tasenvirust ===
+[[Tugna:SARS-CoV-2_49534865371.jpg|thumb|250px|Tugna s umikṛuskub tesskanay-d avirus n [[SARS-CoV-2]]]] 
+
+SARS-CoV-2 d [[Kuṛunavirus]] yeqqnen ar timsedfert tamesguneft tukrizt tanamsadt, yettwasinef i tikkelt tamezwarut seg 3 n yimdanen yuɣ-iten waṭṭan n [[buturin]] yeqqnen s tagrawt n tegnatin n waṭṭanen imesgunfanen ukrizen deg [[Wuhan]], dɣa d avirus-a id igellun s waṭṭan n [[Covid-19]] .<ref name=":14">ECDC (14 February 2020). [https://www.ecdc.europa.eu/sites/default/files/documents/SARS-CoV-2-risk-assessment-14-february-2020.pdf.pdf European Centre for Disease Prevention and Control. Outbreak of severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2): increased transmission beyond China − fourth update]. ECDC (Risk Assessment): Stockholm; 2020. {{Webarchive|url=https://web.archive.org/web/20200215150832/https://www.ecdc.europa.eu/sites/default/files/documents/SARS-CoV-2-risk-assessment-14-february-2020.pdf.pdf |date=15 fuṛaṛ 2020}}</ref>
 
 == Asuṭen ==
 [[Tuddsa tamadlant n tdawsa]] tdewwen d akken [[tallit n tezdalt|akud n tefsirt ar uvirus alamma banen-d iskanen]] d win yettilin gar n 2 ar 10 n wussan. ،<ref>{{amnir n web|akala=https://www.who.int/docs/default-source/coronaviruse/situation-reports/20200126-sitrep-6-2019--ncov.pdf|azwel=Novel Coronavirus (2019-nCoV) Situation Report – 6 26 January 2020|azmez n tuwwṭa=2 fuṛaṛ 2020| akala n ufaylu = https://web.archive.org/web/20200207204621/https://www.who.int/docs/default-source/coronaviruse/situation-reports/20200126-sitrep-6-2019--ncov.pdf | azmez n ufaylu = 7 fuṛaṛ 2020 }}</ref> neɣ seg sin n wussan ar 14 n wussan s unect n [[ammasen i wsenɣed d tesɣil ɣef  waṭṭanen]].<ref name="CDC symptoms">{{amnir n web|akala=https://www.cdc.gov/coronavirus/2019-ncov/about/symptoms.html|azwel=Symptoms of Novel Coronavirus (2019-nCoV) |azmez=31 yennayer 2020|adeg=[[ammasen i wsenɣed d tesɣil ɣef  waṭṭanen]] (CDC)|azmez n tuwwṭa=2 fuṛaṛ 2020| akala n ufaylu = https://web.archive.org/web/20200206103410/https://www.cdc.gov/coronavirus/2019-ncov/about/symptoms.html | azmez n ufaylu = 6 fuṛaṛ 2020 }}</ref>
