*Empty MediaWiki Message*

--- a/Aṭṭan_n_Coronavirus_2019.mw
+++ b/Aṭṭan_n_Coronavirus_2019.mw
@@ -29,6 +29,11 @@ Timiqwa yessawaṭen [[Kuṛunavirus]] tt-ɣamayen-t ugglent (ttwaɛelqen-t) deg
 
 SARS-CoV-2 d [[Kuṛunavirus]] yeqqnen ar timsedfert tamesguneft tukrizt tanamsadt, yettwasinef i tikkelt tamezwarut seg 3 n yimdanen yuɣ-iten waṭṭan n [[buturin]] yeqqnen s tagrawt n tegnatin n waṭṭanen imesgunfanen ukrizen deg [[Wuhan]], dɣa d avirus-a id igellun s waṭṭan n [[Covid-19]] .<ref name=":14">ECDC (14 February 2020). [https://www.ecdc.europa.eu/sites/default/files/documents/SARS-CoV-2-risk-assessment-14-february-2020.pdf.pdf European Centre for Disease Prevention and Control. Outbreak of severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2): increased transmission beyond China − fourth update]. ECDC (Risk Assessment): Stockholm; 2020. {{Webarchive|url=https://web.archive.org/web/20200215150832/https://www.ecdc.europa.eu/sites/default/files/documents/SARS-CoV-2-risk-assessment-14-february-2020.pdf.pdf |date=15 fuṛaṛ 2020}}</ref>
 
+SARS-CoV-2 d win yettakken assaɣ untim i welsaru aẓaṛan n [[SARS-CoV]] anda imusnawen ttɣilen d akken-it iga d aṭṭan [[aɣressagma]] 
+
+=== Asefruret ===
+[[Tugna:COVID-19_cases_in_China.svg|thumb|280px|Tagertilt tesskanay-d timdinin n Ccinwa anda tenfufed deg-sent tignatin timezwura n urwas n Covid-19 di yennayer 2020]]
+
 == Asuṭen ==
 [[Tuddsa tamadlant n tdawsa]] tdewwen d akken [[tallit n tezdalt|akud n tefsirt ar uvirus alamma banen-d iskanen]] d win yettilin gar n 2 ar 10 n wussan. ،<ref>{{amnir n web|akala=https://www.who.int/docs/default-source/coronaviruse/situation-reports/20200126-sitrep-6-2019--ncov.pdf|azwel=Novel Coronavirus (2019-nCoV) Situation Report – 6 26 January 2020|azmez n tuwwṭa=2 fuṛaṛ 2020| akala n ufaylu = https://web.archive.org/web/20200207204621/https://www.who.int/docs/default-source/coronaviruse/situation-reports/20200126-sitrep-6-2019--ncov.pdf | azmez n ufaylu = 7 fuṛaṛ 2020 }}</ref> neɣ seg sin n wussan ar 14 n wussan s unect n [[ammasen i wsenɣed d tesɣil ɣef  waṭṭanen]].<ref name="CDC symptoms">{{amnir n web|akala=https://www.cdc.gov/coronavirus/2019-ncov/about/symptoms.html|azwel=Symptoms of Novel Coronavirus (2019-nCoV) |azmez=31 yennayer 2020|adeg=[[ammasen i wsenɣed d tesɣil ɣef  waṭṭanen]] (CDC)|azmez n tuwwṭa=2 fuṛaṛ 2020| akala n ufaylu = https://web.archive.org/web/20200206103410/https://www.cdc.gov/coronavirus/2019-ncov/about/symptoms.html | azmez n ufaylu = 6 fuṛaṛ 2020 }}</ref>
 
