*Empty MediaWiki Message*

--- a/Arwas_n_waṭṭan_n_Kuṛunavirus_2019-20.mw
+++ b/Arwas_n_waṭṭan_n_Kuṛunavirus_2019-20.mw
@@ -88,6 +88,15 @@ Akken i yezmer usnefli n waṭṭan seld n imiren ad iglu s bungaf amekruz d [[a
 
 == Isragen (ssebbat) ==
 
+=== Anṭaṭ ===
+Tarrayt n wenṭaṭ tagejdant tettili-d seg wemdar ar wemdan n iden s tikciyin timesgunefin am [[anezzu|unezzu]] d [[tusut]]. Tuddsa tamadlant n tdawsa txeddem g uskazal i wakken ad tẓer ma yella wenṭaṭ araskan d wenṭaṭ s tawla kecmen deg iɣunab n wenṭaṭ igejdanen.<ref name=":32">{{amnir n web/fsus/afrensaw|langue=en|auteur1=Wu, F. et al.|titre=Wuhan seafood market pneumonia virus isolate Wuhan-Hu-1, complete genome|url= https://www.ncbi.nlm.nih.gov/nuccore/MN908947|site=GenBank|périodique=|date=2020-01-23|consulté le=2020-01-23|akala n ufaylu= https://web.archive.org/web/20200304185444/https://www.ncbi.nlm.nih.gov/nuccore/MN908947|azmez n ufaylu=2020-03-04}}.</ref>, ɣef wanect-a yessefk ad yili westum gar n yimdanen 1,5 ma drus i wakken ur yettenṭaṭ ara waṭṭan ma yenzi-d (iɛeṭs-d) kra n yiwen 
+
+Timiqwa yessawaṭen [[Kuṛunavirus]] tt-ɣamayen-t ugglent (ttwaɛelqen-t) deg [[azwu|uzwu]] i kra n wakud Kan sin akin ad ɣlint f kra am tgida (ṭṭabla) neɣ kra n tɣawsa ayen yettaǧǧan avirus-nni ad yenṭeṭ ma yeṭṭsa-t (imuss-it) kra n wemdan aladɣa ma yeṭṭsa imi-ynes neɣ allen-is neɣ inzaren-is send ma yessared ifassen-is s waman d [[aserrad|userrad]]
+
+
+=== Asefruret ===
+[[Tugna:COVID-19_cases_in_China.svg|thumb|280px|Tagertilt tesskanay-d timdinin n Ccinwa anda tenfufed deg-sent tignatin timezwura n urwas n Covid-19 di yennayer 2020]]
+
 == Tawessna ==
 
 == Anfufed ==
