*Empty MediaWiki Message*

--- a/Tisenfednin.mw
+++ b/Tisenfednin.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Tisenfednin''' ([[Assaɣ usnan]]: ''Artiodactyla'') d [[tafesna]] n [[aɣersiw|iɣersiwen]] [[timesfednin|imesfednayen]] maca tetteddu ɣef snat n tfednin timeqranin, Deg tfesna ayyi llan-t [[Timsiffatin|temsuṭṭad]] timeqranin am [[aɣelmi|uɣelmi]] d [[Tileɣmatin|tleɣmatin]] d [[Tafunast|ufunas]] d tilmas n iden am [[amdeɣ|umdeɣ]] d [[ilef|yilef]] d [[udad]] d [[izerzer]] 
+'''Tisenfednin''' ([[Assaɣ usnan]]: ''Artiodactyla'') d [[tafesna (tasnudert)|tafesna]] n [[aɣersiw|iɣersiwen]] [[timesfednin|imesfednayen]] maca tetteddu ɣef snat n tfednin timeqranin, Deg tfesna ayyi llan-t [[Timsiffatin|temsuṭṭad]] timeqranin am [[aɣelmi|uɣelmi]] d [[Tileɣmatin|tleɣmatin]] d [[Tafunast|ufunas]] d tilmas n iden am [[amdeɣ|umdeɣ]] d [[ilef|yilef]] d [[udad]] d [[izerzer]]
 
 == Amezruy amhaz ==
 
