*Empty MediaWiki Message*

--- a/Arwas_n_waṭṭan_n_Kuṛunavirus_2019-20.mw
+++ b/Arwas_n_waṭṭan_n_Kuṛunavirus_2019-20.mw
@@ -79,6 +79,10 @@ Anfufed amezwaru i waṭṭan-a deg uzɣar (beṛṛa) n [[Ccinwa]] yella-d g tm
 
 Imusnawen seg [[Ccinwa]] ssawṭen ad ssinfen (ad ɛezlen) w ad ukzen [[agzam n ADN]] n uvirus. Akken ifkan isalen-is i wid-ak nniden i wakken ad sniflen [[Tasedmirt tanmezrit n Polimiraz|Tasedmirt tanmezrit n Polimiraz PCR]] s talɣa tafulmant i wesnirem n waṭṭan. Akken i yettuleɣ d akken [[aselkem n ujinum ummid|aselkem n ujinum]] 2019-nCoV d win yellan seg 75 ar 80% am uselkem n [[SARS-CoV|SARS]] yakk d ugar n 58% d Coronavirus n isaylalen (iberdeɣyal). Maca ur iban ara ma yella avirus-a d win yettakken assaɣ ar SARS.
 
+== Anfufed n waṭṭan n Covid-19 ==
+Yettwasnirem-d waṭṭan n Covid-19 i tikkelt tamezwarut deg temdint n Wuhan id yezgan di tlemmast n Ccinwa deg wayyur n dujamber 2019. Imusnawen ttɣilen d akken aṭṭan-a yekka-d seg iɣersiwen sin akin ineṭṭ-d ar yimdanen s iɣersiwen-nni ig yuɣ waṭṭan-a deg ulzuz n tnezzut n iɣersiwen, sin akin yerna Yenfufed ar igezda n iden n Ccinwa deg wussan imezwura d ilemmasen n wayyur n yennayer s usrag n tfaskiwin n yixef useggas n Ccinwa, ma d tignatin n waṭṭan id ibanen deg beṛṛa n Ccinwa d tid id yelfan s usrag n [[tamerrit|yinig agreɣlan]] 
+
+
 == Iskanen d izmal ==
 Wid ig yuɣ waṭṭan-a yezmer Ur d-tbanayen ara fellasen yiskanen seg 7 ar 14 n wussan imezwura akken i zemren ad sneflin iskanen ilektuyen am [[tusut]], [[tawla]], [[bungaf]] yakk d [[atmelli|utmelli]] (ɛeyyu)
 
