--- a/Arwas_n_waṭṭan_n_Kuṛunavirus_2019-20.mw
+++ b/Arwas_n_waṭṭan_n_Kuṛunavirus_2019-20.mw
@@ -80,8 +80,23 @@ Anfufed amezwaru i waṭṭan-a deg uzɣar (beṛṛa) n [[Ccinwa]] yella-d g tm
 Imusnawen seg [[Ccinwa]] ssawṭen ad ssinfen (ad ɛezlen) w ad ukzen [[agzam n ADN]] n uvirus. Akken ifkan isalen-is i wid-ak nniden i wakken ad sniflen [[Tasedmirt tanmezrit n Polimiraz|Tasedmirt tanmezrit n Polimiraz PCR]] s talɣa tafulmant i wesnirem n waṭṭan. Akken i yettuleɣ d akken [[aselkem n ujinum ummid|aselkem n ujinum]] 2019-nCoV d win yellan seg 75 ar 80% am uselkem n [[SARS-CoV|SARS]] yakk d ugar n 58% d Coronavirus n isaylalen (iberdeɣyal). Maca ur iban ara ma yella avirus-a d win yettakken assaɣ ar SARS.
 
 == Anfufed n waṭṭan n Covid-19 ==
-Yettwasnirem-d waṭṭan n Covid-19 i tikkelt tamezwarut deg temdint n Wuhan id yezgan di tlemmast n Ccinwa deg wayyur n dujamber 2019. Imusnawen ttɣilen d akken aṭṭan-a yekka-d seg iɣersiwen sin akin ineṭṭ-d ar yimdanen s iɣersiwen-nni ig yuɣ waṭṭan-a deg ulzuz n tnezzut n iɣersiwen, sin akin yerna Yenfufed ar igezda n iden n Ccinwa deg wussan imezwura d ilemmasen n wayyur n yennayer s usrag n tfaskiwin n yixef useggas n Ccinwa, ma d tignatin n waṭṭan id ibanen deg beṛṛa n Ccinwa d tid id yelfan s usrag n [[tamerrit|yinig agreɣlan]] 
-
+Yettwasnirem-d waṭṭan n Covid-19 i tikkelt tamezwarut deg temdint n [[Wuhan]] id yezgan di tlemmast n Ccinwa deg wayyur n dujamber 2019. Imusnawen ttɣilen d akken aṭṭan-a yekka-d seg iɣersiwen sin akin ineṭṭ-d ar yimdanen s iɣersiwen-nni ig yuɣ waṭṭan-a deg ulzuz n tnezzut n iɣersiwen, sin akin yerna Yenfufed ar igezda n iden n Ccinwa deg wussan imezwura d ilemmasen n wayyur n yennayer s usrag n tfaskiwin n yixef useggas n Ccinwa, ma d tignatin n waṭṭan id ibanen deg beṛṛa n Ccinwa d tid id yelfan s usrag n [[tamerrit|yinig agreɣlan]]: Taylanda (13 yennayer)؛ Yapan (15 yennayer)؛ Kurya n unẓul (20 yennayer)؛ Taywan d Iwunak Yeddukklen (21 yennayer)؛ Hong Kong Makaw (22 yennayer)؛ Singapur (23 yennayer)؛ Fransa d Nipal Vietnam (24 yennayer)؛ Ustṛalya d Malisya (25 yennayer)؛ Kanada (26 yennayer)؛ Kambudya (27 yennayer)؛ Lalman (28 yennayer) Finlanda d Sri Lanka d Emaret Yeddukklen d Rusya d Swid (31 yennayer). <ref name="APviruswhere">{{Citation|akala=https://apnews.com/VirusOutbreak|azwel=Where the virus has spread|anefsar=[[Associated Press]]|amezwar=Phil|aneggar=Holm|amezwar2=Ken|aneggar2=Moritsugu|azmez n tuwwṭa=29 yennayer 2020|akala n ufaylu=https://web.archive.org/web/20200130191856/https://apnews.com/VirusOutbreak|azmez n ufaylu=30 January 2020}}</ref><ref name="auto2">{{asgeyyet s isali
+| akala = https://www.svd.se/bekraftat-fall-i-jonkoping-av-nya-coronaviruset
+| azwel = Coronaviruset har upptäckts i Jönköping
+| aneggar = Frejdeman
+| amezwar = Hannah
+| azmez = 2020-01-31
+| amahil = Svenska Dagbladet
+| azmez n tuwwṭa = 2020-01-31
+| tutlayt = sv
+| issn = 1101-2412
+| akala n ufaylu = https://web.archive.org/web/20200131183849/https://www.svd.se/bekraftat-fall-i-jonkoping-av-nya-coronaviruset | تاريخ أرشيف = 31 يناير 2020 }}</ref> akken yettwasilef ɣef tmekkest (lmut) n 5 n wid yudnen s Covid-19 deg temdint n [[Qom]] deg talemmast n [[Iran]] yerna kra n izeṭṭa n isallen n iran irmadduden nnan-d d akken timekkisin ulint ar 9, ayen yeǧǧan adabu n [[Lɛiraq|Yiraq]] ad tessers tisekrifin (ad tesseḥreṣ) ɣef yinig seg d ɣer tmurt n Iran akken id teldi [[Asasnef|immasen n usasnef]] deg tewwura n tlisa gar n snat n tmura s usrag n wenṭaṭ n uvirus-a ar Iyiraqiyen, akken daɣen id tessebded (tesseḥbes) tufkit n lviza .<ref>{{aseggayet s isali
+ |akala= https://www.skynewsarabia.com/middle-east/1322473-العراق-يعلق-التأشيرات-السياحية-للإيرانيين-بسبب-كورونا
+ |azwel= العراق يعلق التأشيرات السياحية للإيرانيين بسبب كورونا
+ |anefsar = Sky news Arabia
+ |azmez= 21 fuṛaṛ 2020
+ |azmez n tuwwṭa= 22 fuṛaṛ 2020
+|akala n ufaylu= https://web.archive.org/web/20200224131958/https://www.skynewsarabia.com/middle-east/1322473-العراق-يعلق-التأشيرات-السياحية-للإيرانيين-بسبب-كورونا|azmez n ufaylu=2020-02-24}}</ref>
 
 == Iskanen d izmal ==
 Wid ig yuɣ waṭṭan-a yezmer Ur d-tbanayen ara fellasen yiskanen seg 7 ar 14 n wussan imezwura akken i zemren ad sneflin iskanen ilektuyen am [[tusut]], [[tawla]], [[bungaf]] yakk d [[atmelli|utmelli]] (ɛeyyu)
