*Empty MediaWiki Message*

--- a/Arwas_n_waṭṭan_n_Kuṛunavirus_2019-20.mw
+++ b/Arwas_n_waṭṭan_n_Kuṛunavirus_2019-20.mw
@@ -124,6 +124,12 @@ Timiqwa yessawaṭen [[Kuṛunavirus]] tt-ɣamayen-t ugglent (ttwaɛelqen-t) deg
 
 == Taggaẓt ==
 
+
+Yessutur unabad n Hung Kung seg yimdanen ad aryen (ad seḥbibren) ɣef tazdeg igarrzen n yiman-nsen, akk d waray (d useḥbiber) ɣef tazdeg n yifasen-nsen. Akken id ileɣɣet (yettḥeddir) wid ara ad yinigen beṛṛa n teɣremt ur ṭṭasen ara iɣersiwen, akk ur tetten ara ikesman n tgemrawin akk ad ǧǧen ulzuzen igriyen neɣ ulzuzen n iyuzaṭ imidduren, Akken id tessuter deg yal yiwen ikukra yeṭṭef-it uvirus-a ad yels [[acemmal]] (tasegdelt) akked ad yessiwel i umsuji.
+
+Deg Singapur, Tessutur Taɣlift n tdawsa seg yimdanen ad aryen (ad seḥbibren) ɣef yiswiren n tazdeg tadawsant, Amedya: Assired n yifasen seg wakud ɣer wayeḍ, ur ṭṭasen ara imi-nsen d yinzaren-nsen d wallen-nsen s yifasen-nsen,
+Yerna  yessefk ɣef yimdanen ilan afray (yesɛan aḥulfu) d akken ur garrzen ara, ad aggegen (ad baɛden) seg yigmamen n twaculin-nsen, ad lsen icemmalen w ad rzun ar wemsuji
+
 == Tiski n isgunfa ==
 
 == Ideggan yenṭarren ==
