--- a/Arwas_n_waṭṭan_n_Kuṛunavirus_2019-20.mw
+++ b/Arwas_n_waṭṭan_n_Kuṛunavirus_2019-20.mw
@@ -105,6 +105,9 @@ Akken i yezmer usnefli n waṭṭan seld n imiren ad iglu s bungaf amekruz d [[a
 
 [[Tallit n tezdalt]] (tallit gar n wenṭaṭ d tuffɣa n iskanen) d tin yettaṭṭafen gar n yiwen n wassar 14 n wussan. Maca amur ameqran deg-sent d tid yeṭṭefen 5 n wussan
 
+===Iskanen===
+Seg 20 fuṛaṛ, iskanen n Covid-19 d wid igan ttemcabin ar yiskanen n [[tussit]].{{,}}<ref </ref>name="s1">{{amnir n web |langue=fr |nom1=Sautreuil |prénom1=Pierre |lien auteur1=Pierre Sautreuil |titre=Coronavirus en France : que faire en cas de symptômes ? |url=https://www.lefigaro.fr/sciences/coronavirus-la-marche-a-suivre-en-cas-de-symptomes-20200125 |tansa=Le Figaro.fr |date=2020-01-25 |consulté le=2020-01-25}}</ref>
+
 == Isragen (ssebbat) ==
 
 === Anṭaṭ ===
