*Empty MediaWiki Message*

--- a/Arwas_n_waṭṭan_n_Kuṛunavirus_2019-20.mw
+++ b/Arwas_n_waṭṭan_n_Kuṛunavirus_2019-20.mw
@@ -118,7 +118,7 @@ Seg 20 fuṛaṛ, iskanen n Covid-19 d wid igan ttemcabin ar yiskanen n [[tussit
 * [[Targigit]]: 11,4 %
 * [[Amuktu]] d [[tiririt (aṭṭan)|tiririt]]: 5,0 %
 * [[Asekfel agerray|Asekfel]] n yinzaren: 4,8 %
-* [[Tadist]]: 3,7 %
+* [[Tadist (aṭṭan)|Tadist]]: 3,7 %
 
 Dɣa tawla tezmer ad tbin kra n wussan seld n tusut
 
