--- a/Tawla.mw
+++ b/Tawla.mw
@@ -1,6 +1,4 @@
-'''Tawla''' d [[tilugnaẓɣelt|alluy n tseddart n wezɣal n tfekka]] ɣef [[taẓɣelt n tfekka talsant|yisig-is agaman]], Anecta yettili-d s usrag n walluy n teẓɣelt n [[Asderaẓɣel|usderazɣel]] n tfekka yettilin deg tama n [[adamruj|udamruj]], Anda alluy-a n teẓɣelt yessurus (yesḥullul) tafekka i wakken ad tarey (ad teḥrez) taẓɣelt-is w ad ternu ad tfares i wakken ad temtawa d tmerniwt n tiẓunt n ukkus (tukkist)
-
-
+'''Tawla''' d [[tilugnaẓɣelt|alluy n tseddart n wezɣal n tfekka]] ɣef [[taẓɣelt n tfekka talsant|yisig-is agaman]], Anecta yettili-d s usrag n walluy n teẓɣelt n [[Asderaẓɣel|usderazɣel]] n tfekka yettilin deg tama n [[adamruj|udamruj]], Anda alluy-a n teẓɣelt yessurus (yesḥullul) tafekka i wakken ad tarey (ad teḥrez) taẓɣelt-is w ad ternu ad tfares i wakken ad temtawa d tmerniwt n tiẓunt n ukkus (tukkist), sin akin ad [[tisekreẓagaryt|ẓeyyren iẓuran n weglim]] i wsedres n tamẓalt (lexṣara) n teẓɣelt ayen id yessisrigen (id yettsebbiben) afray s usemmiṭ akken i trennu [[tassast tamaẓwalt]]
 
 == Iskanen d yizmal ==
 
