*Empty MediaWiki Message*

--- a/Tawla.mw
+++ b/Tawla.mw
@@ -5,7 +5,7 @@
 | akala n ufaylu = https://web.archive.org/web/20150324084355/http://www.cdc.gov/flu/homecare/treatfever.htm
 | azmez n tuwwṭa = 24 March 2015
 | azmez n tuwwṭa = 8 May 2015
-| Assaɣ amerẓu = yes }}</ref>
+| Assaɣ amerẓu = yes }}</ref>, taẓɣelt tagamant n tfekka d tin igan gar n 37,5° d 38,3° C (99,5° - 100,9° F) s unect n iɣbula isnajyanen yemgaraden
 
 == Iskanen d yizmal ==
 
