*Empty MediaWiki Message*

--- a/Tazerzayt.mw
+++ b/Tazerzayt.mw
@@ -1,3 +1,5 @@
 '''Tazerzayt''' d [[aṭṭan]] amezwaru yakk i yerna (i yeɣleb) [[Afgan|wemdan]].<ref>{{amnir n web| akala = http://bn.banglapedia.org/index.php?title=গুটিবসন্ত | azwel = isalen ɣef tzerzayt deg tansa bn.banglapedia.org | anefsar = bn.banglapedia.org| akala n ufaylu = https://web.archive.org/web/20200110151828/http://bn.banglapedia.org/index.php?title=গুটিবসন্ত | azmez n ufaylu = 10 yennayer 2020 }}</ref><ref>{{amnir n web| akala = https://www.britannica.com/science/smallpox | azwel = isalen ɣef tzerzayt ritannica.com | anefsar = britannica.com| Akala n ufaylu = https://web.archive.org/web/20190515163551/https://www.britannica.com/science/smallpox | azmez n ufaylu = 15 mayu 2019 }}</ref><ref>{{amnir n web| akala = https://icdcodelookup.com/icd-10/codes/B03 | azwel = isalen ɣef tzerzayt deg tansa icdcodelookup.com | anefsar = icdcodelookup.com| akala n ufaylu = https://web.archive.org/web/20190628233251/https://icdcodelookup.com/icd-10/codes/B03 | azmez n ufaylu = 28 yunyu 2019 }}</ref>. Yenɣa, yezleg yerna [[tidderɣelt|yesderɣel]] aṭas n yimdanen seg teɣzi n umezruy-is. Aṭṭan-a yettmag-d seg yiwen n [[avirus|uvirus]] sin akin yettenṭaṭ seg yimdanen yudnen ar wid-ak ur nudin ara, yettbin-d d tuffɣiwin yemmugen am imesbukkren deg [[aglim|weglim]] n umaṭun sin akin tettmag-d teclemt mi ara ad teɣli tettaǧǧa-d [[azmul (tasnujya)|azmul]] (ccama) deg yideg-nni, send n [[1980]] ur telli ara [[tigezt]] neɣ asuji mgal n tzerzayt anda iy teɣɣ 20% n teɣtas-is ma d 80% nni id yegran tettaǧǧa-d deg-sen izmal ur ntekkes ara yakk akken id igellu s tidderɣelt i kra deg-sen 
 
 Deg useggas n [[1796]], Amsuji n Legniz [[Edward Jenner]] yessuddes-d (ihegga-d) [[tigezt]] mgal tazerzayt. Ma deg iseggasen n 40 n tsut yezrin tazerzayt tenger yakk deg [[Turuft|Uruppa]] d [[Tamrikt n Ugafa|Temrikt tagafant]], deg useggas n [[1967]] [[Tuddsa n Yeɣlanen Yeddukklen]] tessekr-d amezizzel i wakken ad titessenger ma deg useggas n [[1977]] iban-d igim aneggar di tmurt n [[Ṣumal]]. Deg useggas n [[1980]] Tuddsa n Yeɣlanen Yeddukklen tessilef-d d akken tessenger aṭṭan-a
+
+== Asnirem n tigezt (ACRAṬ) ==
