--- a/Tazerzayt.mw
+++ b/Tazerzayt.mw
@@ -3,3 +3,22 @@
 Deg useggas n [[1796]], Amsuji n Legniz [[Edward Jenner]] yessuddes-d (ihegga-d) [[tigezt]] mgal tazerzayt. Ma deg iseggasen n 40 n tsut yezrin tazerzayt tenger yakk deg [[Turuft|Uruppa]] d [[Tamrikt n Ugafa|Temrikt tagafant]], deg useggas n [[1967]] [[Tuddsa n Yeɣlanen Yeddukklen]] tessekr-d amezizzel i wakken ad titessenger ma deg useggas n [[1977]] iban-d igim aneggar di tmurt n [[Ṣumal]]. Deg useggas n [[1980]] Tuddsa n Yeɣlanen Yeddukklen tessilef-d d akken tessenger aṭṭan-a
 
 == Asnirem n tigezt (ACRAṬ) ==
+Deg iseggasen ineggura n [[Tasut tis 18|tsut tis 18]], Amsuji [[Edward Jenner]] iwula yerna yexdem tazrawt ɣef yiwet n teqcict isem-is Sarah Nilmes tetteẓẓeg tafunast tuɣit yakan tzerzayt yerna tettwaggeẓ mgal tazerzayt acku tella tuden s [[Tazerzayt n tfunasin|tzerzayt n tfunasin]]. Edward Jenner yufa-d d akken tinegwa d tirawin seg weglim n win yudnen s tzerzayt n tfunasin w ad t-yegzi i wakken ad tyaɣ waṭṭan-a d ayen ara ad s-d-yefken [[affal]] mgal n tzerzayt acku tazerzayt n tfunasin d win yettemcabin ar tzerzayt maca Kan ur telli ara d tamihant s waṭas 
+
+== Anṭaṭ n waṭṭan ==
+
+== Anṭaṭ n yigim ==
+
+== Timrayin ==
+
+== Tugniwin tuɣ-itent tzerzayt ==
+
+== Tiwlafin ==
+
+== Ẓeṛ daɣen ==
+* [[Azarza]] 
+
+
+== Imniren == 
+[[Taggayt:Tignatin n weglim yeqqnen ar ivirusen]]
+[[Taggayt:aṭṭanen]]
