--- a/Edward_Jenner.mw
+++ b/Edward_Jenner.mw
@@ -3,3 +3,11 @@
 
 == Tazerzayt == 
 Deg iseggasen ineggura n [[Tasut tis 18|tsut tis 18]], Amsuji [[Edward Jenner]] iwula yerna yexdem tazrawt ɣef yiwet n teqcict isem-is Sarah Nilmes tetteẓẓeg tafunast tuɣit yakan tzerzayt yerna tettwaggeẓ mgal tazerzayt acku tella tuden s [[Tazerzayt n tfunasin|tzerzayt n tfunasin]]. Edward Jenner yufa-d d akken tinegwa d tirawin seg weglim n win yudnen s tzerzayt n tfunasin w ad t-yegzi i wakken ad tyaɣ waṭṭan-a d ayen ara ad s-d-yefken [[affal]] mgal n tzerzayt acku tazerzayt n tfunasin d win yettemcabin ar tzerzayt maca Kan ur telli ara d tamihant s waṭas
+
+== Tinfusin-is ==
+
+[[Taggayt:imsujiyen]]
+[[Taggayt:imsujiyen ineglizen n tsut tis 18]]
+[[Taggayt:imsujiyen ineglizen n tsut tis 19]]
+[[Taggayt:imsujiyen n tigzin]]
+[[Taggayt:isnudranen ineglizen]]
