*Empty MediaWiki Message*

--- a/Edward_Jenner.mw
+++ b/Edward_Jenner.mw
@@ -5,8 +5,14 @@
 Deg iseggasen ineggura n [[Tasut tis 18|tsut tis 18]], Amsuji [[Edward Jenner]] iwula yerna yexdem tazrawt ɣef yiwet n teqcict isem-is Sarah Nilmes tetteẓẓeg tafunast tuɣit yakan tzerzayt yerna tettwaggeẓ mgal tazerzayt acku tella tuden s [[Tazerzayt n tfunasin|tzerzayt n tfunasin]]. Edward Jenner yufa-d d akken tinegwa d tirawin seg weglim n win yudnen s tzerzayt n tfunasin w ad t-yegzi i wakken ad tyaɣ waṭṭan-a d ayen ara ad s-d-yefken [[affal]] mgal n tzerzayt acku tazerzayt n tfunasin d win yettemcabin ar tzerzayt maca Kan ur telli ara d tamihant s waṭas
 
 == Tinfusin-is ==
-[[Tigezt|icraṭen]] yettwafken i yal agrud seg wayyuren imenza n tlallit-is ttagẓent mgal n waṭas n waṭṭanen am [[tabuzeggaɣt|tbuzeggaɣt]] d 
+[[Tigezt|icraṭen]] yettwafken i yal agrud seg wayyuren imenza n tlallit-is ttagẓent mgal n waṭas n waṭṭanen am [[tabuzeggaɣt|tbuzeggaɣt]] 
 
+
+
+== Ẓeṛ daɣen ==
+
+
+== Imniren ==
 
 
 [[Taggayt:imsujiyen]]
