*Empty MediaWiki Message*

--- a/Tazerzayt.mw
+++ b/Tazerzayt.mw
@@ -6,6 +6,7 @@ Deg useggas n [[1796]], Amsuji n Legniz [[Edward Jenner]] yessuddes-d (ihegga-d)
 Deg iseggasen ineggura n [[Tasut tis 18|tsut tis 18]], Amsuji [[Edward Jenner]] iwula yerna yexdem tazrawt ɣef yiwet n teqcict isem-is Sarah Nilmes tetteẓẓeg tafunast tuɣit yakan tzerzayt yerna tettwaggeẓ mgal tazerzayt acku tella tuden s [[Tazerzayt n tfunasin|tzerzayt n tfunasin]]. Edward Jenner yufa-d d akken tinegwa d tirawin seg weglim n win yudnen s tzerzayt n tfunasin w ad t-yegzi i wakken ad tyaɣ waṭṭan-a d ayen ara ad s-d-yefken [[affal]] mgal n tzerzayt acku tazerzayt n tfunasin d win yettemcabin ar tzerzayt maca Kan ur telli ara d tamihant s waṭas 
 
 == Anṭaṭ n waṭṭan ==
+Tzerzayt d aṭṭan yetenṭaṭen s č meca ur yetenfufud ara s tazzla am waṭṭanen ivirsanen n iden, ahat aceku agajji niɣ asiwed yessutur asiweṭ yuddsen (ijehden) w yettili-d seld n tuffɣa n tuffɣiwin n weglim
 
 == Anṭaṭ n yigim ==
 
