*Empty MediaWiki Message*

--- a/Tabuzeggaɣt.mw
+++ b/Tabuzeggaɣt.mw
@@ -2,4 +2,6 @@
 
 Aɣbalu n igim n tbuzeggaɣt d tesfert-is d amdan. Tettenṭaṭ s unɣad (aṭerrec) d tuṭṭsa n tɣawsiwin anda yella ubirus-a. Seld ma ad yejji umaṭun ad yeddem [[affal]] mgal tabuzeggaɣa i tanɣa (i lebda)
 
+[[Tugna:Measles_virus.JPG|thumb|255px|Avirus n tbuzeggaɣt]]
+
 == Iskanen ==
