*Empty MediaWiki Message*

--- a/Tabuzeggaɣt.mw
+++ b/Tabuzeggaɣt.mw
@@ -5,3 +5,23 @@ Aɣbalu n igim n tbuzeggaɣt d tesfert-is d amdan. Tettenṭaṭ s unɣad (aṭe
 [[Tugna:Measles_virus.JPG|thumb|255px|Avirus n tbuzeggaɣt]]
 
 == Iskanen ==
+
+
+== Isragen n waṭṭan d isemduyen-is ==
+
+== Igim d wenṭaṭ == 
+
+== Timrayin n tbuzeggaɣt ==
+
+== Asuji ==
+
+== Tasensakrart ==
+
+== Tiwlafin ==
+
+== Ẓeṛ daɣen ==
+
+[[Taggayt:Aṭṭanen]]
+[[Taggayt:Aṭṭan imanṭaṭen]]
+[[Taggayt:Tignatin n weglim yeqqnen ar ivirusen]]
+[[Taggayt:Tafekka n ufgan]]
