--- a/Tabuzeggaɣt.mw
+++ b/Tabuzeggaɣt.mw
@@ -22,6 +22,6 @@ Aɣbalu n igim n tbuzeggaɣt d tesfert-is d amdan. Tettenṭaṭ s unɣad (aṭe
 == Ẓeṛ daɣen ==
 
 [[Taggayt:Aṭṭanen]]
-[[Taggayt:Aṭṭan imanṭaṭen]]
+[[Taggayt:Aṭṭanen imanṭaṭen]]
 [[Taggayt:Tignatin n weglim yeqqnen ar ivirusen]]
 [[Taggayt:Tafekka n ufgan]]
