*Empty MediaWiki Message*

--- a/Tazerzayt.mw
+++ b/Tazerzayt.mw
@@ -9,6 +9,21 @@ Deg iseggasen ineggura n [[Tasut tis 18|tsut tis 18]], Amsuji [[Edward Jenner]] 
 Tzerzayt d aṭṭan yetenṭaṭen s č meca ur yetenfufud ara s tazzla am waṭṭanen ivirsanen n iden, ahat aceku agajji niɣ asiwed yessutur asiweṭ yuddsen (ijehden) w yettili-d seld n tuffɣa n tuffɣiwin n weglim
 
 == Anṭaṭ n yigim ==
+Tazarzayt tettased seg yigim n ubirus n tzarzayt.
+
+Igim yettaṭaḍ seg uselmeẓ n wezwu, akk daɣen si tquddirin n uxenziz n yimi, d uxenfuc akked tgersi.
+
+Yettanṭaḍ seg umdan ɣer wayeḍ seg ubrid n taywalt udem ɣer wayeḍ i tallit tameqqṛant d umdan yeffudi ( مصاب) s umata ɣef ustum n 6 n yiḍaren ( 1,8 m ) i tallitin timeqranin akked umdan yeffudi 
+
+Akken yezmer daɣen ad yenṭeḍ seg ubrid n taywalt tusridt neɣ s yimneggi n tfekka n ufuddi, akken yettenṭaḍ daɣen seg ubrid n ifecka n ufuddi, amedya: ictilen  الفراش،د, neɣ iceṭṭiḍen.
+
+Drus anda tazarzayt tettenṭaḍ seg ubrid n ubirus i d-yettaddem waḍu deg wadagen ( imeḍqan ) umdilen, amedya: timaccinin, tikeryad... Atg, maca abirus yezmer ad yenṭeḍ di yakk tafekka akken yezmer ad yenṭeḍ seg ubrid n yibaɛɛac akked iɣersiwen, ma ur nerni ara asenfufed ( propager ) n waṭṭan.
+
+Yettwaḥsab seg waddaden inaqqen seg ubrirus n tazarzayt.
+
+Tḍarru-d tmettant ger wass wis mraw  ( 10 ) d wass mraw sḍis ( 16 ) n waṭṭan.
+
+Taɣzint ( raison ) n tmettant  seg waṭṭan n tazarzayt ur d-ban ara.
 
 == Timrayin ==
 
