*Empty MediaWiki Message*

--- a/Tazerzayt.mw
+++ b/Tazerzayt.mw
@@ -9,21 +9,12 @@ Deg iseggasen ineggura n [[Tasut tis 18|tsut tis 18]], Amsuji [[Edward Jenner]] 
 Tzerzayt d aṭṭan yetenṭaṭen s č meca ur yetenfufud ara s tazzla am waṭṭanen ivirsanen n iden, ahat aceku agajji niɣ asiwed yessutur asiweṭ yuddsen (ijehden) w yettili-d seld n tuffɣa n tuffɣiwin n weglim
 
 == Anṭaṭ n yigim ==
-Tazarzayt tettased seg yigim n ubirus n tzarzayt.
+Tazarzayt tettmag-d seg yigim n uvirus n tzarzayt, Igim yettaṭaṭ seg uselmeẓ n wezwu, akk daɣen si tmiqwin n yimi, d yinzaren akked tgersi.
+Yettanṭaṭ seg umdan ɣer wayeṭ seg ubrid n taywalt udem ɣer wudem i talliyin timeqqṛanin d umdan yudnen, s umata ɣef ustum n 6 n yiḍaren ( 1,8 m ) i talliyin timeqranin akked umdan yudnen , Akken yezmer daɣen ad yenṭeṭ seg ubrid n taywalt tusridt neɣ s [[amazzal|imazzalen]] n tfekka n umaṭun, akken yettenṭaṭ daɣen seg ubrid n ifecka n umaṭun am iselsa-ynes d w[[usu|usu-ynes]]
 
-Igim yettaṭaḍ seg uselmeẓ n wezwu, akk daɣen si tquddirin n uxenziz n yimi, d uxenfuc akked tgersi.
+Drus anda tazarzayt tettenṭaṭ seg ubrid n uvirus i d-yettaddam wezwu deg yideggen (imeḍqan) umdilen am tmaccinin d tkeryas. maca avirus-a yezmer ad yenṭeṭ di yakk tafekka akken yezmer ad yenṭeṭ seg ubrid n [[aburɣas|iburɣas]] akked iɣersiwen, ma ur yettwarna ara (Ur yettwaɣlab ara) ɣef wenfufed n waṭṭan-a. Anda yettwameggez seg tignatin iteɣɣen seg ubrirus n tazarzayt.
 
-Yettanṭaḍ seg umdan ɣer wayeḍ seg ubrid n taywalt udem ɣer wayeḍ i tallit tameqqṛant d umdan yeffudi ( مصاب) s umata ɣef ustum n 6 n yiḍaren ( 1,8 m ) i tallitin timeqranin akked umdan yeffudi 
-
-Akken yezmer daɣen ad yenṭeḍ seg ubrid n taywalt tusridt neɣ s yimneggi n tfekka n ufuddi, akken yettenṭaḍ daɣen seg ubrid n ifecka n ufuddi, amedya: ictilen  الفراش،د, neɣ iceṭṭiḍen.
-
-Drus anda tazarzayt tettenṭaḍ seg ubrid n ubirus i d-yettaddem waḍu deg wadagen ( imeḍqan ) umdilen, amedya: timaccinin, tikeryad... Atg, maca abirus yezmer ad yenṭeḍ di yakk tafekka akken yezmer ad yenṭeḍ seg ubrid n yibaɛɛac akked iɣersiwen, ma ur nerni ara asenfufed ( propager ) n waṭṭan.
-
-Yettwaḥsab seg waddaden inaqqen seg ubrirus n tazarzayt.
-
-Tḍarru-d tmettant ger wass wis mraw  ( 10 ) d wass mraw sḍis ( 16 ) n waṭṭan.
-
-Taɣzint ( raison ) n tmettant  seg waṭṭan n tazarzayt ur d-ban ara.
+[[Timekkest]] (lmut) d tin yettilin  gar wass wis mraw  ( 10 ) d wass mrawsdis ( 16 ) n waṭṭan., Asrag (ssebba) n tmekkist  seg waṭṭan n tazarzayt ur d-ban ara.
 
 == Timrayin ==
 
