*Empty MediaWiki Message*

--- a/Arwas_n_waṭṭan_n_Kuṛunavirus_2019-20.mw
+++ b/Arwas_n_waṭṭan_n_Kuṛunavirus_2019-20.mw
@@ -133,6 +133,8 @@ Timiqwa yessawaṭen [[Kuṛunavirus]] tt-ɣamayen-t ugglent (ttwaɛelqen-t) deg
 === Asefruret ===
 [[Tugna:COVID-19_cases_in_China.svg|thumb|280px|Tagertilt tesskanay-d timdinin n Ccinwa anda tenfufed deg-sent tignatin timezwura n urwas n Covid-19 di yennayer 2020]]
 
+Deg wass n [[31 dujamber]] [[2019]] tamurt n [[Ccinwa]] telɣet [[tuddsa tamadlant n tdawsa]] ɣef usefruret n wazzag n turin ur yettwassen ara yettwasnirem di temdint n [[Wuhan]] igan d tamdint tameqrant di Ccinwa s wazal n 11 n imelyan n imezdaɣ
+
 == Tawessna ==
 
 == Anfufed ==
