*Empty MediaWiki Message*

--- a/Arwas_n_waṭṭan_n_Kuṛunavirus_2019-20.mw
+++ b/Arwas_n_waṭṭan_n_Kuṛunavirus_2019-20.mw
@@ -133,7 +133,13 @@ Timiqwa yessawaṭen [[Kuṛunavirus]] tt-ɣamayen-t ugglent (ttwaɛelqen-t) deg
 === Asefruret ===
 [[Tugna:COVID-19_cases_in_China.svg|thumb|280px|Tagertilt tesskanay-d timdinin n Ccinwa anda tenfufed deg-sent tignatin timezwura n urwas n Covid-19 di yennayer 2020]]
 
-Deg wass n [[31 dujamber]] [[2019]] tamurt n [[Ccinwa]] telɣet [[tuddsa tamadlant n tdawsa]] ɣef usefruret n wazzag n turin ur yettwassen ara yettwasnirem di temdint n [[Wuhan]] igan d tamdint tameqrant di Ccinwa s wazal n 11 n imelyan n imezdaɣ
+Deg wass n [[31 dujamber]] [[2019]] tamurt n [[Ccinwa]] telɣet [[tuddsa tamadlant n tdawsa]] ɣef usefruret n wazzag n turin ur yettwassen ara yettwasnirem di temdint n [[Wuhan]]<ref>{{amnir n web/fsus
+| akala = https://www.who.int/westernpacific/health-topics/coronavirus
+| azwel = Coronavirus
+| tansa = www.who.int
+| tutlayt = en
+| azmez n tuwwṭa = 020-01-30
+| akala n ufaylu = https://web.archive.org/web/20200120170442/https://www.who.int/westernpacific/health-topics/coronavirus | azmez n ufaylu = 20 yennayer 2020 }}</ref> igan d tamdint tameqrant di Ccinwa s wazal n 11 n imelyan n imezdaɣ
 
 == Tawessna ==
 
