--- a/Arwas_n_waṭṭan_n_Kuṛunavirus_2019-20.mw
+++ b/Arwas_n_waṭṭan_n_Kuṛunavirus_2019-20.mw
@@ -139,7 +139,7 @@ Deg wass n [[31 dujamber]] [[2019]] tamurt n [[Ccinwa]] telɣet [[tuddsa tamadla
 | tansa = www.who.int
 | tutlayt = en
 | azmez n tuwwṭa = 020-01-30
-| akala n ufaylu = https://web.archive.org/web/20200120170442/https://www.who.int/westernpacific/health-topics/coronavirus | azmez n ufaylu = 20 yennayer 2020 }}</ref> igan d tamdint tameqrant di Ccinwa s wazal n 11 n imelyan n imezdaɣ
+| akala n ufaylu = https://web.archive.org/web/20200120170442/https://www.who.int/westernpacific/health-topics/coronavirus | azmez n ufaylu = 20 yennayer 2020 }}</ref> igan d tamdint tameqrant tis 7 di Ccinwa s wazal n 11 n imelyan n imezdaɣ
 
 == Tawessna ==
 
